objects/EOF_EAI_Service_Log__c.object
<CustomObject>
    <fields>
        <fullName>OF_NotifyValue__c</fullName>
        <formula>IF(OR (Notify__c=null,Notify__r.EOF_Inviata__c=true), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OF_NotifyValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_OM_Nuovo_Flusso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OF_OM_Nuovo_Flusso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_PP_KIT_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kit log</label>
        <referenceTo>EOF_EAI_Service_Log__c</referenceTo>
        <relationshipLabel>SVLAN Logs (EAI Service Log)</relationshipLabel>
        <relationshipName>EAI_Service_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_PP_NomeRichiesta_Figlio__c</fullName>
        <formula>EOF_Codice_Operatore__c + &apos;_&apos; +right(Name, 6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OF_PP_NomeRichiesta_Figlio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_PP_NomeRichiesta__c</fullName>
        <formula>EOF_Codice_Operatore__c + &apos;_&apos; + IF(PO_PP_ID_RichiestaVLAN__r.Name=null, right( Name,6), right( PO_PP_ID_RichiestaVLAN__r.Name,6) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OF_PP_NomeRichiesta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_RecentlyModified__c</fullName>
        <formula>IF(AND(OR(RecordType.DeveloperName = &apos;FiberNotify&apos;,RecordType.DeveloperName = &apos;FiberRequest&apos;), 
OR(CONTAINS(&apos;OLO&apos;,EOF_Tipo_Comunicazione_String__c), EOF_Tipo_Comunicazione_String__c = &apos;&apos;), 
OR(Notify__c=null, Notify__r.EOF_Inviata__c=true),Caso__r.LastModifiedDate &gt; NOW()-15,EOF_Response__c=&apos;ACK&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OF_RecentlyModified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Remote_ID__c</fullName>
        <label>OF_Remote_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_ACK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_SA_AZIONE_APPARATO__c</fullName>
        <label>Azione Apparato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Azione__c</fullName>
        <label>Azione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_CODICE_MOTIVAZIONE_CONSEGNA__c</fullName>
        <label>Codice Motivazione Consegna</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_CODICE_MOTIVAZIONE_RITIRO__c</fullName>
        <label>Codice Motivazione Ritiro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_CODICE_MOTIVAZIONE_SERVIZIO__c</fullName>
        <label>Codice Motivazione Servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_CUSTOMER_VLAN__c</fullName>
        <label>Customer VLan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Cpe_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cpe Log</label>
        <referenceTo>EOF_EAI_Service_Log__c</referenceTo>
        <relationshipLabel>Cpe</relationshipLabel>
        <relationshipName>OF_SA_Cpe</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_SA_DDT__c</fullName>
        <label>DDT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Desospensione_Attivi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desospensione Attivi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_SA_Direzione_Flusso__c</fullName>
        <label>Direzione Flusso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_ESITO_RITIRO_APPARATO__c</fullName>
        <label>Esito Ritiro Apparato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_ESITO_SERVIZIO__c</fullName>
        <label>Esito Servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Esito__c</fullName>
        <label>Esito</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_ID_APPARATO_CONSEGNATO__c</fullName>
        <label>ID Apparato Consegnato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_ID_APPARATO__c</fullName>
        <label>ID Apparato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_INFORMAZIONI_SERVIZIO__c</fullName>
        <label>Informazioni Servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_INFORMAZIONI_VLAN__c</fullName>
        <label>Informazioni VLan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Interfaccia_OM__c</fullName>
        <label>OF_SA_Interfaccia_OM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_KIT_CONSEGNA_VLAN__c</fullName>
        <label>Kit Consegna VLan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_MODELLO_DI_SERVIZIO_VLAN__c</fullName>
        <label>Modello Di Servizio VLan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_MOTIVAZIONE_CONSEGNA__c</fullName>
        <label>Motivazione Consegna</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_MOTIVAZIONE_RITIRO__c</fullName>
        <label>Motivazione Ritiro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_MOTIVAZIONE_SERVIZIO__c</fullName>
        <label>Motivazione Servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Metodo__c</fullName>
        <label>Metodo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_NOME_SERVIZIO__c</fullName>
        <label>Nome Servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_PASSWORD_APPARATO__c</fullName>
        <label>Password Apparato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_PROFILO_VLAN_PL__c</fullName>
        <label>Profilo VLan Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COS 0</fullName>
                </value>
                <value>
                    <fullName>COS 1</fullName>
                </value>
                <value>
                    <fullName>COS 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_SA_PROFILO_VLAN__c</fullName>
        <label>Profilo VLan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_SERVICE_VLAN__c</fullName>
        <label>Service VLan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Servizi_Aggiuntivi_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servizi Aggiuntivi Log</label>
        <referenceTo>EOF_EAI_Service_Log__c</referenceTo>
        <relationshipLabel>Servizi Aggiuntivi</relationshipLabel>
        <relationshipName>OF_SA_Servizi_Aggiuntivi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_SA_USER_VLAN__c</fullName>
        <label>User Vlan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_VLan_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VLan Log</label>
        <referenceTo>EOF_EAI_Service_Log__c</referenceTo>
        <relationshipLabel>VLan Log</relationshipLabel>
        <relationshipName>OF_SA_VLan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_SH_AppointmentDate__c</fullName>
        <label>OF_SH_AppointmentDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SH_Appuntamento_OLO__c</fullName>
        <label>OF_SH_Appuntamento_OLO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SH_DeliveryCompany__c</fullName>
        <label>OF_SH_DeliveryCompany</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SH_Fascia_App__c</fullName>
        <label>OF_SH_Fascia_App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SH_ID_WO__c</fullName>
        <label>OF_SH_ID_WO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SH_Token_id__c</fullName>
        <label>OF_SH_Token_id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_TT_Data_Ora_Inizio_SLA__c</fullName>
        <label>Data Ora Inizio SLA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_Tipo_ComunicazioneValue__c</fullName>
        <formula>IF(ISBLANK(EOF_Tipo_Comunicazione_String__c), &quot;TRUE&quot;, IF (CONTAINS(&apos;OLO&apos;,EOF_Tipo_Comunicazione_String__c),&quot;TRUE&quot;,&quot;FALSE&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OF_Tipo_ComunicazioneValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordine_retry__c</fullName>
        <label>Ordine retry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POP__c</fullName>
        <label>POP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Accordo_Quadro_Number__c</fullName>
        <label>Accordo Quadro</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Accordo_Quadro__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Accordo Quadro</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>EAI Service Logs</relationshipLabel>
        <relationshipName>EAI_Service_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_BB_1_via_interessato__c</fullName>
        <label>Cavo esistente 1° via (m)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_BB_2_via_interessato__c</fullName>
        <label>Cavo esistente 2° via (m)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Civico_3__c</fullName>
        <label>Civico</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Civico__c</fullName>
        <label>Civico</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EAI Service Logs</relationshipLabel>
        <relationshipName>EAI_Service_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Data_Attivazione_Ordine__c</fullName>
        <label>Data Attivazione Ordine</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Data_Attivazione_Richiesta__c</fullName>
        <label>Data Attivazione Richiesta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Disponibilit_della_rete_a_partire_da__c</fullName>
        <label>Disponibilità della rete a partire da</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Incluso_nell_offerta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO_Incluso_nell_offerta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Indirizzo_collegamento__c</fullName>
        <label>Indirizzo Collegamento</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_IndrizoCal__c</fullName>
        <formula>PO_Indirizzo_collegamento__c + &quot; &quot; + PO_Civico__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO_IndrizoCal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Log_Comune_2__c</fullName>
        <label>Comune 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Log_Comune_3__c</fullName>
        <label>Comune 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Log_IdComune2__c</fullName>
        <label>ID Comune 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Log_IdComune3__c</fullName>
        <label>ID Comune 3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Log_Ordine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Log Ordine</label>
        <referenceTo>EOF_EAI_Service_Log__c</referenceTo>
        <relationshipLabel>EAI Service Logs (Log Ordine)</relationshipLabel>
        <relationshipName>EAI_Service_Logs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_tratta_prima_via__c</fullName>
        <formula>PO_BB_1_via_interessato__c + PO_Posa_1_via_nuovo_Drop__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunghezza tratta prima via (m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_tratta_seconda_via__c</fullName>
        <formula>PO_BB_2_via_interessato__c + PO_Posa_2_via_nuovo_Drop__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunghezza tratta seconda via (m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Nome_E_Cognome_PM__c</fullName>
        <label>Nome e Cognome PM di Riferimento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Nome_Progetto__c</fullName>
        <label>Nome Progetto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Nota_sito_1__c</fullName>
        <label>Nota sito</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Nota_sito_2__c</fullName>
        <label>Nota sito</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Nota_sito_3__c</fullName>
        <label>Nota sito</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Nota_sito__c</fullName>
        <label>Nota Sito</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Note_Modifica_Offerta__c</fullName>
        <label>PO_Note_Modifica_Offerta</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Note_Operatore__c</fullName>
        <label>Note Operatore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Numero_Telefonico_PM__c</fullName>
        <label>Numero Telefonico PM di Riferimento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Numero_fibre_richieste__c</fullName>
        <label>Numero fibre richieste</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PO_Tipo_percorso__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>2+2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Offerta_Caricata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO_Offerta_Caricata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Offerta_Inoltrata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO_Offerta_Inoltrata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Offerta__c</fullName>
        <label>Offerta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P2P Base</fullName>
                </value>
                <value>
                    <fullName>P2P Attiva</fullName>
                </value>
                <value>
                    <fullName>Fiber Link</fullName>
                </value>
                <value>
                    <fullName>IRU</fullName>
                </value>
                <value>
                    <fullName>Fiber Lease</fullName>
                </value>
                <value>
                    <fullName>Evento Temporaneo</fullName>
                </value>
                <value>
                    <fullName>KIT</fullName>
                </value>
                <value>
                    <fullName>Backhauling</fullName>
                </value>
                <value>
                    <fullName>Dark Fiber</fullName>
                </value>
                <value>
                    <fullName>E-Access</fullName>
                </value>
                <value>
                    <fullName>E-Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_P2PAttiva_KIT_Indirizzo_Consegna__c</fullName>
        <label>Indirizzo Consegna</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_P2PAttiva_Kit_Consegna_VLan__c</fullName>
        <label>Kit Consegna VLan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_P2PAttiva_Nome_del_KIT__c</fullName>
        <label>Nome del KIT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_P2PAttiva_Optical_Rate_Limiting__c</fullName>
        <label>Optical Rate Limiting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 GB</fullName>
                </value>
                <value>
                    <fullName>10 GB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_P2PAttiva_Opzione__c</fullName>
        <label>PO_P2PAttiva_Opzione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Flexible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_PP_ID_RichiestaVLAN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ID Richiesta VLAN</label>
        <referenceTo>EOF_EAI_Service_Log__c</referenceTo>
        <relationshipLabel>Lista Log VLAN</relationshipLabel>
        <relationshipName>EAI_Service_Logs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_PP_ID_Richiesta_testo__c</fullName>
        <label>ID Richiesta testo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_ID_VLAN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ID VLAN</label>
        <referenceTo>EOF_EAI_Service_Log__c</referenceTo>
        <relationshipLabel>COS Logs (EAI Service Log)</relationshipLabel>
        <relationshipName>Log_COS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_PP_Interfaccia__c</fullName>
        <label>Interfaccia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_MultiCos_Class__c</fullName>
        <label>MultiCos Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_POP_raccolta__c</fullName>
        <label>POP di raccolta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_Progressivo_Ordine__c</fullName>
        <label>Progressivo Ordine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_PP_User_VLAN__c</fullName>
        <label>User VLAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_cos_class__c</fullName>
        <label>Cos Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_cos_remarking__c</fullName>
        <label>Cos Remarking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_cos_type__c</fullName>
        <label>Cos Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_dhcp_Option82__c</fullName>
        <label>Dhcp Option 82</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Pop_1_di_riferimento__c</fullName>
        <label>Pop (1) di riferimento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POP1</fullName>
                </value>
                <value>
                    <fullName>POP2</fullName>
                </value>
                <value>
                    <fullName>POP3</fullName>
                </value>
                <value>
                    <fullName>POPN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Pop_2_di_riferimento__c</fullName>
        <label>Pop (2) di riferimento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POP1</fullName>
                </value>
                <value>
                    <fullName>POP2</fullName>
                </value>
                <value>
                    <fullName>POP3</fullName>
                </value>
                <value>
                    <fullName>POPN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Posa_1_via_nuovo_Drop__c</fullName>
        <label>Posa nuovo cavo 1° via (m)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Posa_2_via_nuovo_Drop__c</fullName>
        <label>Posa nuovo cavo 2° via (m)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Prime_Contractor__c</fullName>
        <label>Prime Contractor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_SA_Data_Inserimento_Ordine__c</fullName>
        <label>Data Inserimento Ordine</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PO_Sito_3__c</fullName>
        <label>Sito</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Sito__c</fullName>
        <label>Sito</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_TP_Causale_Apertura_Segnalazione__c</fullName>
        <label>Causale Apertura Segnalazione</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Segnalazione Provisioning</fullName>
                </value>
                <value>
                    <fullName>Problema Tecnico/Applicativo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_TP_Codice_Ordine_Ticket_Provisioning__c</fullName>
        <externalId>true</externalId>
        <label>Codice Ordine Ticket Provisioning</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_TP_Descrizione_Causale__c</fullName>
        <label>Descrizione Causale</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PO_TP_Causale_Apertura_Segnalazione__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sollecito</fullName>
                </value>
                <value>
                    <fullName>Nuova Segnalazione</fullName>
                </value>
                <value>
                    <fullName>Richiesta Informazioni</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_TP_Dettaglio_Richiesta__c</fullName>
        <label>Dettaglio Richiesta</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PO_TP_Sottocausale__c</fullName>
        <label>Sottocausale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_TT_Tipo_Risorsa__c</fullName>
        <label>Tipo Risorsa</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Tempi_di_attivazione_mesi__c</fullName>
        <label>Tempi di attivazione (mesi)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Tipo_di_collegamento__c</fullName>
        <label>Tipo di Collegamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Backhauling</fullName>
                </value>
                <value>
                    <fullName>BTS</fullName>
                </value>
                <value>
                    <fullName>Point-to-Point</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>Anello</fullName>
                </value>
                <value>
                    <fullName>BACKBONE</fullName>
                </value>
                <value>
                    <fullName>P2P - Cliente</fullName>
                </value>
                <value>
                    <fullName>Dark Fiber</fullName>
                </value>
                <value>
                    <fullName>SDH</fullName>
                </value>
                <value>
                    <fullName>DWDM</fullName>
                </value>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>Layer 2</fullName>
                </value>
                <value>
                    <fullName>NGN</fullName>
                </value>
                <value>
                    <fullName>MSAN</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>E-Access</fullName>
                </value>
                <value>
                    <fullName>E-Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Tipo_percorso__c</fullName>
        <label>Tipo Percorso</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Singola Via</fullName>
                </value>
                <value>
                    <fullName>Doppia Via</fullName>
                </value>
                <value>
                    <fullName>Doppia Via Diversificata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Traffic_Load_Balancing__c</fullName>
        <label>PO_Traffic_Load_Balancing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                    <default>true</default>
                    <label>ACTIVE</label>
                </value>
                <value>
                    <fullName>STANDBY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_indirizzo_collegamento_3__c</fullName>
        <label>Indirizzo collegamento</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Particella_Toponomastica_1__c</fullName>
        <label>Particella Toponomastica 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corso</fullName>
                </value>
                <value>
                    <fullName>Largo</fullName>
                </value>
                <value>
                    <fullName>Piazza</fullName>
                </value>
                <value>
                    <fullName>Piazzale</fullName>
                </value>
                <value>
                    <fullName>Via</fullName>
                    <default>true</default>
                    <label>Via</label>
                </value>
                <value>
                    <fullName>Viale</fullName>
                </value>
                <value>
                    <fullName>Vicolo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Particella_Toponomastica_2__c</fullName>
        <label>Particella Toponomastica 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corso</fullName>
                </value>
                <value>
                    <fullName>Largo</fullName>
                </value>
                <value>
                    <fullName>Piazza</fullName>
                </value>
                <value>
                    <fullName>Piazzale</fullName>
                </value>
                <value>
                    <fullName>Via</fullName>
                    <default>true</default>
                    <label>Via</label>
                </value>
                <value>
                    <fullName>Viale</fullName>
                </value>
                <value>
                    <fullName>Vicolo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Particella_Toponomastica_3__c</fullName>
        <label>Particella Toponomastica 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corso</fullName>
                </value>
                <value>
                    <fullName>Largo</fullName>
                </value>
                <value>
                    <fullName>Piazza</fullName>
                </value>
                <value>
                    <fullName>Piazzale</fullName>
                </value>
                <value>
                    <fullName>Via</fullName>
                    <default>true</default>
                    <label>Via</label>
                </value>
                <value>
                    <fullName>Viale</fullName>
                </value>
                <value>
                    <fullName>Vicolo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pop_di_raccolta__c</fullName>
        <label>Pop di raccolta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posizione_ODF__c</fullName>
        <label>Posizione ODF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>